# ploma-vermella

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  gdocs.py  install-hooks.sh  pv.py  pyproject.toml  server.py
.github/workflows/: ci.yml
docs/: lint.md
tests/: test_gdocs.py  test_pv.py
